# medical-news-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml.example
alembic/: env.py
alembic/versions/: 42228282765d_initial_tables.py  a713113a0802_initial_tables.py
medicalagent/adapters/: __init__.py
medicalagent/adapters/agent/: dialog_title_generator.py  langchain_base.py  schemas.py  streamlit_callback.py  system_prompt.py
medicalagent/adapters/agent/tools/: openalex_search_tool.py  save_finding_tool.py  semantic_scholar_search.py  tavilysearch.py
medicalagent/adapters/repositories/: __init__.py  in_memory_dialog_repository.py  in_memory_findings_repository.py  in_memory_user_repository.py
medicalagent/adapters/repositories/sqla/: models.py  sqla_dialog_repo.py  sqla_findings_repo.py  sqla_user_repo.py
medicalagent/config/: __init__.py  env_load.py  settings.py
medicalagent/data/: mock_data.py
medicalagent/domain/: dialog.py  finding.py  user.py
medicalagent/drivers/: defaults.py  di.py  main.py  st_state.py  user_service.py
medicalagent/drivers/central_chat/: component.py
medicalagent/drivers/left_sidebar/: component.py  dialog_item.py  dialog_list.py
medicalagent/drivers/main_content/: __init__.py  mock_data.py
medicalagent/drivers/main_content/central_chat/: component.py
medicalagent/drivers/right_sidebar/: component.py  result_card.py  result_list.py
medicalagent/infra/: db.py
medicalagent/infra/requests_transport/: base.py  exceptions.py  requests_transport.py  utils.py
medicalagent/ports/: __init__.py  agent.py  dialog_repository.py  findings_repository.py  user_repository.py
(+3 files in other folders)
