[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "medicalagent"
authors = [{ name = "Alex Zakrevsky", email = "zakrevskyalex1323@gmail.com" }]
description = "Medical News Agent that allows to discover and verify high-impact medical news."
readme = "README.md"
requires-python = ">=3.13.7"
dynamic = ["dependencies", "optional-dependencies"]
version = "0.1.0"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements-dev.txt"] }

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools-scm

[tool.setuptools]
packages = ["medicalagent"]

[tool.pytest.ini_options]
addopts = "-q"
log_cli = true
log_cli_level = "DEBUG"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
pythonpath = "mdeicalagent/tests"

[tool.coverage.run]
concurrency = ["thread"]
omit = ["medicalagent/tests/*", "*/__init__.py", "*/config/*", "*/ports/*"]
source = ["medicalagent"]
branch = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "pass",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true

[tool.ruff]
line-length = 88
lint.ignore = ["E501"]
lint.select = ["E", "F", "I", "PL", "UP", "W"]
lint.extend-select = ["I"]
exclude = ["migrations", "notebooks"]
fix = true
target-version = "py313"
src = ["medicalagent", "tests"]

[tool.bandit]
exclude_dirs = ["venv", "tests"]

[tool.mypy]
exclude = '(?x)^(venv|\.venv|build|dist|\.mypy_cache)/'
